--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -7,6 +7,8 @@
 <h1>{{ task["name"] }}</h1>
 <h5>{{ task["summary"] }}</h5>
 <p>Description: {{ task["description"] }}</p>
+<a href="{{ url_for('edit_task', pk=task['id']) }}" class="btn btn-primary">Edit</a>
+
 <form id="deactivateForm" action="{{ url_for('delete_task', pk=task['id']) }}" method="POST">
     <input type="hidden" name="_method" value="PUT">
     <button type="submit" class="btn btn-outline-danger" onclick="confirmDeactivation()">
