--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -3,6 +3,7 @@
 {% block title %}Create New Task{% endblock title %}
 
 {% block content %}
+<h1>Create A New Task</h1>
 <form method="post" action="/tasks/create">
     <label for="title">Title:</label>
     <input type="text" id="title" name="title" required>
