--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Success{% endblock title %}
+
+
+{% block title %}Success!{% endblock title %}
+
 {% block content %}
     <h1>Success</h1>
-    <p>The operation you requested has been successful.</p>
+    <p>Success! {{ msg }}</p>
     <p><a href="{{ url_for('list') }}">Click here</a> to go to the home page.</p>
 {% endblock content %}
