--- a/app/templates/delete.html
+++ b/app/templates/delete.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h2>Are you sure you want to delete this task?</h2>
 <form method="post" action="/tasks/delete/{{ task_id }}">
-    <button type="submit">Delete Task</button>
+    <button type="submit" class="bi bi-trash">Delete Task</button>
 </form>
 {% endblock content %}
 
